Fixed Resource Management
Fixed The Latency issue on resource management section, but still a little bit slow overall

--- a/index.html
+++ b/index.html
@@ -216,10 +216,13 @@
             </p>
           </div>
         </section>
-        <section id="cardFillSub">
-          
-        </section>
+        <div class="table-container">
+          <table id="cardFillSub" class="table is-striped is-fullwidth"><tbody>
+            <br><button id="loadbutton" class="button is-primary is-fullwidth" onclick="addSub()">Load Subjects</button>
+          </tbody></table>
+      </div>
       </section>
+
     <!-- Firebase Init -->
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
