--- a/index.html
+++ b/index.html
@@ -218,9 +218,8 @@
           </div>
         </section>
         <div class="table-container">
-          <table id="cardFillSub" class="table is-striped is-fullwidth"><tbody>
-            <br><button id="loadbutton" class="button is-primary is-fullwidth" onclick="addSub()">Load Subjects</button>
-          </tbody></table>
+          <div id="SubSection" class="table is-striped is-fullwidth">
+          </div>
       </div>
       </section>
 
