--- a/index.html
+++ b/index.html
@@ -1,233 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Eduspike Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" type="image/png" href="img/Logo.png">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body>
-    <section class="hero is-warning is-bold is-medium">
-        <!-- Hero head: will stick at the top -->
-        <div class="hero-head">
-          <nav class="navbar">
-            <div class="container">
-              <div class="navbar-brand">
-                <p class="title">EDUSPIKE</p>
-              </div>
-            </div>
-          </nav>
-        </div>
-      
-        <!-- Hero content: will be in the middle -->
-        <div class="hero-body">
-          <div class="container has-text-centered">
-            <h1 id="TitleBar" class="title">
-              <div class="field is-grouped">
-                <p class="control is-expanded">
-                  <input autocomplete="off" id="EMA" class="input is-primary is-rounded" type="text" placeholder="Email">
-                </p>
-                <p class="control is-expanded">
-                  <input autocomplete="off" id="PAS" class="input is-primary is-rounded" type="password" placeholder="Password">
-                </p>
-                <p class="control">
-                  <a onclick="login()" class="button is-primary is-rounded">
-                    Log In
-                  </a>
-                </p>
-              </div>
-              <br>
-            </h1>
-            <h2 class="subtitle">
-                For Administrators Only, Contact Nushan Kodikara For Further Details +94719988189
-            </h2>
-          </div>
-        </div>
-      
-        <!-- Hero footer: will stick at the bottom -->
-        <div id="navBar" class="hero-foot">
-            <div class="tabs is-boxed is-centered">
-                <ul>
-                  <li id="DE" class="is-active" onclick="init()">
-                    <a>
-                      <span class="icon is-small"><i class="fas fa-database"></i></span>
-                      <span>Data Entry</span>
-                    </a>
-                  </li>
-                  <li id="AN" onclick="announcements()">
-                    <a>
-                      <span class="icon is-small"><i class="fas fa-broadcast-tower"></i></span>
-                      <span>Broadcasts [</span>
-                      <span class="tag is-dark" id="BroadcastCount">0</span>
-                    </a>
-                  </li>
-                  <li id="SR" onclick="resources()">
-                    <a>
-                      <span class="icon is-small"><i class="fas fa-book"></i></span>
-                      <span>Resource Management [</span>
-                      <span class="tag is-info" id="ResourceCount">0</span>
-                    </a>
-                  </li>
-                </ul>
-            </div>
-        </div>
-      </section>
-      <section id="DataEntry">
-        <form onsubmit="postData()">
-          <br>
-          <div class="card">
-            <header class="card-header">
-              <p class="card-header-title">
-                Resource Forum
-              </p>
-            </header>
-            <div class="card-content">
-              <div class="field">
-                <label class="label">Subject</label>
-                <div class="control">
-                  <input autocomplete="off" id="SUB" class="input is-primary is-rounded" type="text" placeholder="Subject" required>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Resource Name</label>
-                <div class="control">
-                  <input autocomplete="off" id="RES" class="input is-primary is-rounded" type="text" placeholder="Resource Name" required>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Resource Type</label>
-                <div class="control">
-                  <div class="select">
-                    <select id="TYP" required>
-                      <option>Past Papers</option>
-                      <option>Model Papers</option>
-                      <option>Resources</option>
-                      <option>Notes</option>
-                      <option>Videos</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Description</label>
-                <div class="control">
-                  <textarea autocomplete="off" id="DES" class="textarea is-primary is-rounded" type="text" placeholder="Resource Description" required></textarea>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Link</label>
-                <div class="control">
-                  <input autocomplete="off" id="LIN" class="input is-primary is-rounded" type="text" placeholder="link" required>
-                </div>
-              </div>
-            </div>
-            <br>
-            <footer class="card-footer columns">
-                <input class="button card-footer-item" type="submit">
-                <input class="button card-footer-item" type="reset">
-            </footer>
-          </div>
-        </form>
-        <form onsubmit="postCred()">
-          <br>
-          <div class="card">
-            <header class="card-header">
-              <p class="card-header-title">
-                Creditors
-              </p>
-            </header>
-            <div class="card-content">
-              <div class="field">
-                <label class="label">Creditors Name</label>
-                <div class="control">
-                  <input autocomplete="off" id="CNAM" class="input is-primary is-rounded" type="text" placeholder="Name" required>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Creditors Subject</label>
-                <div class="control">
-                  <input autocomplete="off" id="CSUB" class="input is-primary is-rounded" type="text" placeholder="Subject" required>
-                </div>
-              </div>
-              <div class="field">
-                <label class="label">Creditors Social Media</label>
-                <div class="control">
-                  <input autocomplete="off" id="CLIN" class="input is-primary is-rounded" type="text" placeholder="Link" required>
-                </div>
-              </div>
-              <br>
-              <footer class="card-footer columns">
-                <input class="button card-footer-item" type="submit">
-                <input class="button card-footer-item" type="reset">
-            </footer>
-          </div>
-        </form>
-        <form onsubmit="broadcast()">
-          <br>
-          <div class="card">
-            <header class="card-header">
-              <p class="card-header-title">
-                Broadcast Announcements
-              </p>
-            </header>
-            <div class="card-content">
-              <div class="field">
-                <label class="label">Announcements</label>
-                <div class="control">
-                  <textarea autocomplete="off" id="BRDC" class="textarea is-primary is-rounded" type="text" placeholder="Announcements" required></textarea>
-                </div>
-              </div>
-              <br>
-              <footer class="card-footer columns">
-                <input class="button card-footer-item" type="submit">
-                <input class="button card-footer-item" type="reset">
-            </footer>
-          </div>
-        </form>
-      </section>
-      <section id="Announcements"></section>
-      <section id="SubjectResources">
-        <section>
-          <br>
-          <div class="field">
-            <p id="TitleBar" class="control has-text-centered has-icons-left">
-              <input id="searchString" onkeyup="searchQue()" class="input is-rounded is-danger" type="text" placeholder="Search">
-              <span class="icon is-small is-left">
-                <i class="fas fa-search"></i>
-              </span>
-            </p>
-          </div>
-        </section>
-        <div class="table-container">
-          <div id="SubSection" class="table is-striped is-fullwidth">
-          </div>
-      </div>
-      </section>
-
-    <!-- Firebase Init -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
-
-    <script>
-    var firebaseConfig = {
-        apiKey: "AIzaSyCMusA3FXCkdVD2opi8slhmaVv09HqYFNY",
-        authDomain: "odyssey-c2429.firebaseapp.com",
-        databaseURL: "https://odyssey-c2429.firebaseio.com",
-        projectId: "odyssey-c2429",
-        storageBucket: "odyssey-c2429.appspot.com",
-        messagingSenderId: "913532160633",
-        appId: "1:913532160633:web:2aa2fbfe167acae378e2a8",
-        measurementId: "G-RQ9Z9DFXW7"
-    };
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-    var database = firebase.database();
-    </script>
-    <script src="js/index.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <title>Eduspike Dashboard</title> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"> <link rel="stylesheet" href="css/index.css"> <link rel="icon" type="image/png" href="img/Logo.png"> <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script></head><body> <section class="hero is-warning is-bold is-medium"> <div class="hero-head"> <nav class="navbar"> <div class="container"> <div class="navbar-brand"> <p class="title">EDUSPIKE</p></div></div></nav> </div><div class="hero-body"> <div class="container has-text-centered"> <h1 id="TitleBar" class="title"> <div class="field is-grouped"> <p class="control is-expanded"> <input autocomplete="off" id="EMA" class="input is-primary is-rounded" type="text" placeholder="Email"> </p><p class="control is-expanded"> <input autocomplete="off" id="PAS" class="input is-primary is-rounded" type="password" placeholder="Password"> </p><p class="control"> <a onclick="login()" class="button is-primary is-rounded"> Log In </a> </p></div><br></h1> <h2 class="subtitle"> For Administrators Only, Contact Nushan Kodikara For Further Details +94719988189 </h2> </div></div><div id="navBar" class="hero-foot"> <div class="tabs is-boxed is-centered"> <ul> <li id="DE" class="is-active" onclick="activate('DataEntry')"> <a> <span class="icon is-small"><i class="fas fa-database"></i></span> <span>Data Entry</span> </a> </li><li id="FB" onclick="activate('Feedbacks')"> <a> <span class="icon is-small"><i class="fas fa-inbox"></i></span> <span>Feedbacks [</span> <span class="tag is-primary" id="FeedCount">0</span> </a> </li><li id="RE" onclick="activate('Reports')"> <a> <span class="icon is-small"><i class="fas fa-bug"></i></span> <span>Reports [</span> <span class="tag is-danger" id="RepoCount">0</span> </a> </li><li id="AN" onclick="activate('Announcements')"> <a> <span class="icon is-small"><i class="fas fa-broadcast-tower"></i></span> <span>Broadcasts [</span> <span class="tag is-dark" id="BroadcastCount">0</span> </a> </li><li id="SR" onclick="activate('SubjectResources')"> <a> <span class="icon is-small"><i class="fas fa-book"></i></span> <span>Resource Management [</span> <span class="tag is-info" id="ResourceCount">0</span> </a> </li></ul> </div></div></section> <section id="DataEntry"> <form onsubmit="postData()"> <br><div class="card"> <header class="card-header"> <p class="card-header-title"> Resource Forum </p></header> <div class="card-content"> <div class="field"> <label class="label">Subject</label> <div class="control"> <input autocomplete="off" id="SUB" class="input is-primary is-rounded" type="text" placeholder="Subject" required> </div></div><div class="field"> <label class="label">Resource Name</label> <div class="control"> <input autocomplete="off" id="RES" class="input is-primary is-rounded" type="text" placeholder="Resource Name" required> </div></div><div class="field"> <label class="label">Resource Type</label> <div class="control"> <div class="select"> <select id="TYP" required> <option>Past Papers</option> <option>Model Papers</option> <option>Resources</option> <option>Notes</option> <option>Videos</option> </select> </div></div></div><div class="field"> <label class="label">Description</label> <div class="control"> <textarea autocomplete="off" id="DES" class="textarea is-primary is-rounded" type="text" placeholder="Resource Description" required></textarea> </div></div><div class="field"> <label class="label">Link</label> <div class="control"> <input autocomplete="off" id="LIN" class="input is-primary is-rounded" type="text" placeholder="link" required> </div></div><br><footer class="card-footer columns"> <input class="button card-footer-item" type="submit"> <input class="button card-footer-item" type="reset"> </footer> </div></div></form> <form onsubmit="postCred()"> <br><div class="card"> <header class="card-header"> <p class="card-header-title"> Creditors </p></header> <div class="card-content"> <div class="field"> <label class="label">Creditors Name</label> <div class="control"> <input autocomplete="off" id="CNAM" class="input is-primary is-rounded" type="text" placeholder="Name" required> </div></div><div class="field"> <label class="label">Creditors Subject</label> <div class="control"> <input autocomplete="off" id="CSUB" class="input is-primary is-rounded" type="text" placeholder="Subject" required> </div></div><div class="field"> <label class="label">Creditors Social Media</label> <div class="control"> <input autocomplete="off" id="CLIN" class="input is-primary is-rounded" type="text" placeholder="Link" required> </div></div><br><footer class="card-footer columns"> <input class="button card-footer-item" type="submit"> <input class="button card-footer-item" type="reset"> </footer> </div></div></form> <form onsubmit="broadcast()"> <br><div class="card"> <header class="card-header"> <p class="card-header-title"> Broadcast Announcements </p></header> <div class="card-content"> <div class="field"> <label class="label">Announcements</label> <div class="control"> <textarea autocomplete="off" id="BRDC" class="textarea is-primary is-rounded" type="text" placeholder="Announcements" required></textarea> </div></div><br><footer class="card-footer columns"> <input class="button card-footer-item" type="submit"> <input class="button card-footer-item" type="reset"> </footer> </div></form> </section> <section id="Feedbacks"></section> <section id="Reports"></section> <section id="Announcements"></section> <section id="SubjectResources"> <section> <br><div class="field"> <p id="TitleBar" class="control has-text-centered has-icons-left"> <input id="searchString" onkeyup="searchQue()" class="input is-rounded is-danger" type="text" placeholder="Search"> <span class="icon is-small is-left"> <i class="fas fa-search"></i> </span> </p></div></section> <div class="table-container"> <div id="SubSection" class="table is-striped is-fullwidth"> </div></div></section> <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script> <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script> <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script> <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script> <script>var firebaseConfig={apiKey: "AIzaSyCMusA3FXCkdVD2opi8slhmaVv09HqYFNY", authDomain: "odyssey-c2429.firebaseapp.com", databaseURL: "https://odyssey-c2429.firebaseio.com", projectId: "odyssey-c2429", storageBucket: "odyssey-c2429.appspot.com", messagingSenderId: "913532160633", appId: "1:913532160633:web:2aa2fbfe167acae378e2a8", measurementId: "G-RQ9Z9DFXW7"}; firebase.initializeApp(firebaseConfig); firebase.analytics(); var database=firebase.database(); </script> <script src="js/index.js"></script></body></html>
